Add MessageSegment support to compressors and decompressors